src/app/ui/headline.component.css
@keyframes rotating {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(-360deg);
  }
}

@keyframes flash {
  from {
    background-color: #ff5252;
    border-radius: 10px;
  }
  to {
    background-color: inherit;
    color: inherit;
    /*border-radius: 0px;*/
  }
}


.header {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 55px;
  border-bottom: 2px solid rgba(0, 0, 0, .32);
}
.header__title {
  font-family: 'Raleway', sans-serif;
  font-size: 1.5rem;
  font-weight: 900;
  color: #ff5252;
}
.header__refresh {
  position: absolute;
  right: 10px;
  top: 15px;
  color: rgba(0, 0, 0, .54);
  cursor: pointer;
}
.header__refresh:hover {
  animation: rotating 2s linear infinite;
}

.items {
  display: flex;
  flex-direction: column;
  width: 100%;
  min-height: 150px;
}

.state__info {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'Roboto', sans-serif;
  font-size: 1.2rem;
  font-weight: 100;
  margin-top: 50px;
}
.state__info .refresh {
  margin-top: 30px;
  font-size: 3rem !important;
  color: rgba(0, 0, 0, .54);
  cursor: pointer;
  transition: color .3s;
}
.state__info .refresh:hover {
  animation: rotating 2s linear infinite;
  color: #000000;
}


.item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  padding: 5px 8px;
  min-height: 50px;
  font-weight: 200;
  transition: background-color .3s;

  border-bottom: 1px solid rgba(0, 0, 0, .18);
}
.item:hover, .item:active {
  background-color: rgba(0, 0, 0, .04);
}
.item.flash {
  animation: flash 1s linear;
}

.item__info {
  font-size: 0.95rem;
  color: rgba(0, 0, 0, 0.92);
  text-decoration: none !important;
  margin-right: 10px;
  width: 100%;
}

.item__info__title {
  font-weight: 400;
}

.item__info__description {
  font-size: 0.81em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 5px 0px;
}

.item__badge {
  display: block;
  margin-left: auto;
  font-size: 0.8rem;
  font-weight: 600;
  background-color: #ff5252;
  color: #ffffff;
  border-radius: 10px;
  min-width: -webkit-min-content;
  min-width: auto;
  padding: 0px 8px;
  height: 20px;
  line-height: 20px;
  text-align: center;
}



/**
  * SPINNER
  */
.spinner {
  width: 40px;
  height: 40px;

  position: relative;
  margin: 100px auto;
}

.double-bounce1, .double-bounce2 {
  width: 100%;
  height: 100%;
  border-radius: 50%;
  background-color: #333;
  opacity: 0.6;
  position: absolute;
  top: 0;
  left: 0;

  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
  animation: sk-bounce 2.0s infinite ease-in-out;
}

.double-bounce2 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}

@-webkit-keyframes sk-bounce {
  0%, 100% { -webkit-transform: scale(0.0) }
  50% { -webkit-transform: scale(1.0) }
}

@keyframes sk-bounce {
  0%, 100% {
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 50% {
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
  }
}

